--- a/application/index/view/public/left.html
+++ b/application/index/view/public/left.html
@@ -178,6 +178,12 @@
                             </li >
                         </ul>
                     </li>
+                    <li>
+                        <a _href="{:url('index/WorkingHours/index')}">
+                            <i class="iconfont">&#xe6a7;</i>
+                            <cite>工时参数</cite>
+                        </a>
+                    </li >
                 </ul>
             </li>
             <li>
