--- a/application/index/view/blueprint/blueprint-infos.html
+++ b/application/index/view/blueprint/blueprint-infos.html
@@ -111,9 +111,9 @@
             </div>
             <div style="border:1px #D8BFD8 solid;margin:10px 0 15px 0;padding:10px 10px 10px 0;box-shadow: 10px 10px 5px #888888;" id="specia">
                 <div class="layui-form-item" id="thickness2_Dia">
-                    <label class="layui-form-label">毛坯</label>
+                    <label class="layui-form-label">毛坯厚度</label>
                     <div class="layui-input-inline">
-                        <input type="text" name="thickness2_Dia" lay-verify="required"
+                        <input type="text" name="thickness2_Dia"
                                value="{$blueprintInfo.thickness2_Dia}" placeholder="请输入"
                                autocomplete="off" class="layui-input">
                     </div>
