--- a/application/index/view/quoted/viewshow.html
+++ b/application/index/view/quoted/viewshow.html
@@ -23,10 +23,10 @@
                     <th>产品名称</th>
                     <th>材料</th>
                     <th>形状</th>
-                    <th>尺寸</th>
+                    <th>毛坯尺寸</th>
                     <th>图纸工艺</th>
                     <th>数量</th>
-                    <th>单重</th>
+                    <th>单重(kg)</th>
                     <th>总重</th>
                     <th>单材料费</th>
                     <th>总材料费</th>
@@ -91,7 +91,7 @@
                     </td>
                     <td>{$quotedList.shuliang}</td>
                     <td>{$quotedList.danzhong}</td>
-                    <td>{$quotedList.zongjia}</td>
+                    <td>{$quotedList.zongzhong}</td>
                     <td>{$quotedList.dancailiaofeiyon}</td>
                     <td>{$quotedList.zongcailiaofeiyon}</td>
                     <td>{$quotedList.jingpijiagongfeiyon}</td>
